# avtomat

./: CMakeLists.txt  avt.h  main.cpp
